LULUParser.cpp

// Generated from LULU.g4 by ANTLR 4.7.2


#include "LULUListener.h"

#include "LULUParser.h"


using namespace antlrcpp;
using namespace antlr4;

LULUParser::LULUParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

LULUParser::~LULUParser() {
  delete _interpreter;
}

std::string LULUParser::getGrammarFileName() const {
  return "LULU.g4";
}

const std::vector<std::string>& LULUParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& LULUParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

LULUParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LULUParser::Ft_defContext *> LULUParser::ProgramContext::ft_def() {
  return getRuleContexts<LULUParser::Ft_defContext>();
}

LULUParser::Ft_defContext* LULUParser::ProgramContext::ft_def(size_t i) {
  return getRuleContext<LULUParser::Ft_defContext>(i);
}


size_t LULUParser::ProgramContext::getRuleIndex() const {
  return LULUParser::RuleProgram;
}

void LULUParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LULUListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void LULUParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LULUListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

LULUParser::ProgramContext* LULUParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, LULUParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(60);
      ft_def();
      setState(63); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << LULUParser::T__9)
      | (1ULL << LULUParser::T__10)
      | (1ULL << LULUParser::T__11)
      | (1ULL << LULUParser::T__12)
      | (1ULL << LULUParser::T__14)
      | (1ULL << LULUParser::T__16)
      | (1ULL << LULUParser::ID))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Ft_defContext ------------------------------------------------------------------

LULUParser::Ft_defContext::Ft_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LULUParser::Type_defContext* LULUParser::Ft_defContext::type_def() {
  return getRuleContext<LULUParser::Type_defContext>(0);
}

LULUParser::Fun_defContext* LULUParser::Ft_defContext::fun_def() {
  return getRuleContext<LULUParser::Fun_defContext>(0);
}


size_t LULUParser::Ft_defContext::getRuleIndex() const {
  return LULUParser::RuleFt_def;
}

void LULUParser::Ft_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LULUListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFt_def(this);
}

void LULUParser::Ft_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LULUListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFt_def(this);
}

LULUParser::Ft_defContext* LULUParser::ft_def() {
  Ft_defContext *_localctx = _tracker.createInstance<Ft_defContext>(_ctx, getState());
  enterRule(_localctx, 2, LULUParser::RuleFt_def);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case LULUParser::T__9:
      case LULUParser::T__10:
      case LULUParser::T__11:
      case LULUParser::T__12:
      case LULUParser::ID: {
        setState(65);
        type_def();
        break;
      }

      case LULUParser::T__14:
      case LULUParser::T__16: {
        setState(66);
        fun_def();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Type_defContext ------------------------------------------------------------------

LULUParser::Type_defContext::Type_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LULUParser::TypeContext* LULUParser::Type_defContext::type() {
  return getRuleContext<LULUParser::TypeContext>(0);
}

std::vector<tree::TerminalNode *> LULUParser::Type_defContext::ID() {
  return getTokens(LULUParser::ID);
}

tree::TerminalNode* LULUParser::Type_defContext::ID(size_t i) {
  return getToken(LULUParser::ID, i);
}

std::vector<LULUParser::ComponentContext *> LULUParser::Type_defContext::component() {
  return getRuleContexts<LULUParser::ComponentContext>();
}

LULUParser::ComponentContext* LULUParser::Type_defContext::component(size_t i) {
  return getRuleContext<LULUParser::ComponentContext>(i);
}


size_t LULUParser::Type_defContext::getRuleIndex() const {
  return LULUParser::RuleType_def;
}

void LULUParser::Type_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LULUListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType_def(this);
}

void LULUParser::Type_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LULUListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType_def(this);
}

LULUParser::Type_defContext* LULUParser::type_def() {
  Type_defContext *_localctx = _tracker.createInstance<Type_defContext>(_ctx, getState());
  enterRule(_localctx, 4, LULUParser::RuleType_def);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    type();
    setState(70);
    match(LULUParser::ID);
    setState(73);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LULUParser::T__0) {
      setState(71);
      match(LULUParser::T__0);
      setState(72);
      match(LULUParser::ID);
    }
    setState(75);
    match(LULUParser::T__1);
    setState(77); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(76);
      component();
      setState(79); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << LULUParser::T__3)
      | (1ULL << LULUParser::T__4)
      | (1ULL << LULUParser::T__5)
      | (1ULL << LULUParser::T__6)
      | (1ULL << LULUParser::T__9)
      | (1ULL << LULUParser::T__10)
      | (1ULL << LULUParser::T__11)
      | (1ULL << LULUParser::T__12)
      | (1ULL << LULUParser::T__14)
      | (1ULL << LULUParser::T__16)
      | (1ULL << LULUParser::ID))) != 0));
    setState(81);
    match(LULUParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComponentContext ------------------------------------------------------------------

LULUParser::ComponentContext::ComponentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LULUParser::Var_defContext* LULUParser::ComponentContext::var_def() {
  return getRuleContext<LULUParser::Var_defContext>(0);
}

LULUParser::Fun_defContext* LULUParser::ComponentContext::fun_def() {
  return getRuleContext<LULUParser::Fun_defContext>(0);
}

LULUParser::Access_modifierContext* LULUParser::ComponentContext::access_modifier() {
  return getRuleContext<LULUParser::Access_modifierContext>(0);
}


size_t LULUParser::ComponentContext::getRuleIndex() const {
  return LULUParser::RuleComponent;
}

void LULUParser::ComponentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LULUListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComponent(this);
}

void LULUParser::ComponentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LULUListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComponent(this);
}

LULUParser::ComponentContext* LULUParser::component() {
  ComponentContext *_localctx = _tracker.createInstance<ComponentContext>(_ctx, getState());
  enterRule(_localctx, 6, LULUParser::RuleComponent);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(84);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << LULUParser::T__3)
      | (1ULL << LULUParser::T__4)
      | (1ULL << LULUParser::T__5))) != 0)) {
      setState(83);
      access_modifier();
    }
    setState(88);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case LULUParser::T__6:
      case LULUParser::T__9:
      case LULUParser::T__10:
      case LULUParser::T__11:
      case LULUParser::T__12:
      case LULUParser::ID: {
        setState(86);
        var_def();
        break;
      }

      case LULUParser::T__14:
      case LULUParser::T__16: {
        setState(87);
        fun_def();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Access_modifierContext ------------------------------------------------------------------

LULUParser::Access_modifierContext::Access_modifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t LULUParser::Access_modifierContext::getRuleIndex() const {
  return LULUParser::RuleAccess_modifier;
}

void LULUParser::Access_modifierContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LULUListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAccess_modifier(this);
}

void LULUParser::Access_modifierContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LULUListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAccess_modifier(this);
}

LULUParser::Access_modifierContext* LULUParser::access_modifier() {
  Access_modifierContext *_localctx = _tracker.createInstance<Access_modifierContext>(_ctx, getState());
  enterRule(_localctx, 8, LULUParser::RuleAccess_modifier);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << LULUParser::T__3)
      | (1ULL << LULUParser::T__4)
      | (1ULL << LULUParser::T__5))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_defContext ------------------------------------------------------------------

LULUParser::Var_defContext::Var_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LULUParser::TypeContext* LULUParser::Var_defContext::type() {
  return getRuleContext<LULUParser::TypeContext>(0);
}

std::vector<LULUParser::Var_valContext *> LULUParser::Var_defContext::var_val() {
  return getRuleContexts<LULUParser::Var_valContext>();
}

LULUParser::Var_valContext* LULUParser::Var_defContext::var_val(size_t i) {
  return getRuleContext<LULUParser::Var_valContext>(i);
}


size_t LULUParser::Var_defContext::getRuleIndex() const {
  return LULUParser::RuleVar_def;
}

void LULUParser::Var_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LULUListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_def(this);
}

void LULUParser::Var_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LULUListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_def(this);
}

LULUParser::Var_defContext* LULUParser::var_def() {
  Var_defContext *_localctx = _tracker.createInstance<Var_defContext>(_ctx, getState());
  enterRule(_localctx, 10, LULUParser::RuleVar_def);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LULUParser::T__6) {
      setState(92);
      match(LULUParser::T__6);
    }
    setState(95);
    type();
    setState(96);
    var_val();
    setState(101);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == LULUParser::T__7) {
      setState(97);
      match(LULUParser::T__7);
      setState(98);
      var_val();
      setState(103);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(104);
    match(LULUParser::T__8);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

LULUParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LULUParser::TypeContext::ID() {
  return getToken(LULUParser::ID, 0);
}


size_t LULUParser::TypeContext::getRuleIndex() const {
  return LULUParser::RuleType;
}

void LULUParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LULUListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void LULUParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LULUListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}

LULUParser::TypeContext* LULUParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 12, LULUParser::RuleType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << LULUParser::T__9)
      | (1ULL << LULUParser::T__10)
      | (1ULL << LULUParser::T__11)
      | (1ULL << LULUParser::T__12)
      | (1ULL << LULUParser::ID))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_valContext ------------------------------------------------------------------

LULUParser::Var_valContext::Var_valContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LULUParser::RefContext* LULUParser::Var_valContext::ref() {
  return getRuleContext<LULUParser::RefContext>(0);
}

LULUParser::ExprContext* LULUParser::Var_valContext::expr() {
  return getRuleContext<LULUParser::ExprContext>(0);
}


size_t LULUParser::Var_valContext::getRuleIndex() const {
  return LULUParser::RuleVar_val;
}

void LULUParser::Var_valContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LULUListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_val(this);
}

void LULUParser::Var_valContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LULUListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_val(this);
}

LULUParser::Var_valContext* LULUParser::var_val() {
  Var_valContext *_localctx = _tracker.createInstance<Var_valContext>(_ctx, getState());
  enterRule(_localctx, 14, LULUParser::RuleVar_val);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(108);
    ref();
    setState(111);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LULUParser::T__13) {
      setState(109);
      match(LULUParser::T__13);
      setState(110);
      expr(0);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Fun_defContext ------------------------------------------------------------------

LULUParser::Fun_defContext::Fun_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LULUParser::Fun_defContext::ID() {
  return getToken(LULUParser::ID, 0);
}

LULUParser::BlockContext* LULUParser::Fun_defContext::block() {
  return getRuleContext<LULUParser::BlockContext>(0);
}

std::vector<LULUParser::Args_varContext *> LULUParser::Fun_defContext::args_var() {
  return getRuleContexts<LULUParser::Args_varContext>();
}

LULUParser::Args_varContext* LULUParser::Fun_defContext::args_var(size_t i) {
  return getRuleContext<LULUParser::Args_varContext>(i);
}


size_t LULUParser::Fun_defContext::getRuleIndex() const {
  return LULUParser::RuleFun_def;
}

void LULUParser::Fun_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LULUListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFun_def(this);
}

void LULUParser::Fun_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LULUListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFun_def(this);
}

LULUParser::Fun_defContext* LULUParser::fun_def() {
  Fun_defContext *_localctx = _tracker.createInstance<Fun_defContext>(_ctx, getState());
  enterRule(_localctx, 16, LULUParser::RuleFun_def);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LULUParser::T__14) {
      setState(113);
      match(LULUParser::T__14);
      setState(114);
      args_var(0);
      setState(115);
      match(LULUParser::T__15);
      setState(116);
      match(LULUParser::T__13);
    }
    setState(120);
    match(LULUParser::T__16);
    setState(121);
    match(LULUParser::ID);
    setState(122);
    match(LULUParser::T__14);
    setState(124);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << LULUParser::T__9)
      | (1ULL << LULUParser::T__10)
      | (1ULL << LULUParser::T__11)
      | (1ULL << LULUParser::T__12)
      | (1ULL << LULUParser::ID))) != 0)) {
      setState(123);
      args_var(0);
    }
    setState(126);
    match(LULUParser::T__15);
    setState(127);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Args_varContext ------------------------------------------------------------------

LULUParser::Args_varContext::Args_varContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LULUParser::TypeContext* LULUParser::Args_varContext::type() {
  return getRuleContext<LULUParser::TypeContext>(0);
}

tree::TerminalNode* LULUParser::Args_varContext::ID() {
  return getToken(LULUParser::ID, 0);
}

LULUParser::Args_varContext* LULUParser::Args_varContext::args_var() {
  return getRuleContext<LULUParser::Args_varContext>(0);
}


size_t LULUParser::Args_varContext::getRuleIndex() const {
  return LULUParser::RuleArgs_var;
}

void LULUParser::Args_varContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LULUListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArgs_var(this);
}

void LULUParser::Args_varContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LULUListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArgs_var(this);
}


LULUParser::Args_varContext* LULUParser::args_var() {
   return args_var(0);
}

LULUParser::Args_varContext* LULUParser::args_var(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  LULUParser::Args_varContext *_localctx = _tracker.createInstance<Args_varContext>(_ctx, parentState);
  LULUParser::Args_varContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 18;
  enterRecursionRule(_localctx, 18, LULUParser::RuleArgs_var, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(130);
    type();
    setState(135);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == LULUParser::T__17) {
      setState(131);
      match(LULUParser::T__17);
      setState(132);
      match(LULUParser::T__18);
      setState(137);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(138);
    match(LULUParser::ID);
    _ctx->stop = _input->LT(-1);
    setState(154);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<Args_varContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleArgs_var);
        setState(140);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(141);
        match(LULUParser::T__7);
        setState(142);
        type();
        setState(147);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == LULUParser::T__17) {
          setState(143);
          match(LULUParser::T__17);
          setState(144);
          match(LULUParser::T__18);
          setState(149);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(150);
        match(LULUParser::ID); 
      }
      setState(156);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

LULUParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LULUParser::Var_defContext *> LULUParser::BlockContext::var_def() {
  return getRuleContexts<LULUParser::Var_defContext>();
}

LULUParser::Var_defContext* LULUParser::BlockContext::var_def(size_t i) {
  return getRuleContext<LULUParser::Var_defContext>(i);
}

std::vector<LULUParser::StmtContext *> LULUParser::BlockContext::stmt() {
  return getRuleContexts<LULUParser::StmtContext>();
}

LULUParser::StmtContext* LULUParser::BlockContext::stmt(size_t i) {
  return getRuleContext<LULUParser::StmtContext>(i);
}


size_t LULUParser::BlockContext::getRuleIndex() const {
  return LULUParser::RuleBlock;
}

void LULUParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LULUListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void LULUParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LULUListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}

LULUParser::BlockContext* LULUParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 20, LULUParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(157);
    match(LULUParser::T__1);
    setState(162);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << LULUParser::T__6)
      | (1ULL << LULUParser::T__9)
      | (1ULL << LULUParser::T__10)
      | (1ULL << LULUParser::T__11)
      | (1ULL << LULUParser::T__12)
      | (1ULL << LULUParser::T__14)
      | (1ULL << LULUParser::T__19)
      | (1ULL << LULUParser::T__20)
      | (1ULL << LULUParser::T__21)
      | (1ULL << LULUParser::T__22)
      | (1ULL << LULUParser::T__23)
      | (1ULL << LULUParser::T__27)
      | (1ULL << LULUParser::T__28)
      | (1ULL << LULUParser::T__29)
      | (1ULL << LULUParser::T__31)
      | (1ULL << LULUParser::T__34)
      | (1ULL << LULUParser::T__35)
      | (1ULL << LULUParser::ID))) != 0)) {
      setState(160);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 14, _ctx)) {
      case 1: {
        setState(158);
        var_def();
        break;
      }

      case 2: {
        setState(159);
        stmt();
        break;
      }

      }
      setState(164);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(165);
    match(LULUParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

LULUParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LULUParser::AssignContext* LULUParser::StmtContext::assign() {
  return getRuleContext<LULUParser::AssignContext>(0);
}

LULUParser::Func_callContext* LULUParser::StmtContext::func_call() {
  return getRuleContext<LULUParser::Func_callContext>(0);
}

LULUParser::Cond_stmtContext* LULUParser::StmtContext::cond_stmt() {
  return getRuleContext<LULUParser::Cond_stmtContext>(0);
}

LULUParser::Loop_stmtContext* LULUParser::StmtContext::loop_stmt() {
  return getRuleContext<LULUParser::Loop_stmtContext>(0);
}

tree::TerminalNode* LULUParser::StmtContext::ID() {
  return getToken(LULUParser::ID, 0);
}


size_t LULUParser::StmtContext::getRuleIndex() const {
  return LULUParser::RuleStmt;
}
